# suinfra-cli

./: Dockerfile  README.md  fly.toml  pyproject.toml
suinfra_cli/: __init__.py  main.py  models.py  utils.py
suinfra_cli/commands/: benchmark.py  rpc.py
